--- a/BackendCanchas/app/views/play_fields/edit.html.slim
+++ b/BackendCanchas/app/views/play_fields/edit.html.slim
@@ -1,8 +1,8 @@
-h1 Editing play_field
+h1 Editar detalles de la cancha
 
 == render 'form'
 
-= link_to 'Show', @play_field
-'|
-= link_to 'Back', play_fields_path
+= link_to 'Regresar a listado', @play_field
+' | 
+= link_to 'Regresar a todos', play_fields_path
 
