--- a/BackendCanchas/app/views/play_fields/_form.html.slim
+++ b/BackendCanchas/app/views/play_fields/_form.html.slim
@@ -1,17 +1,21 @@
 = simple_form_for(@play_field) do |f|
   = f.error_notification
 
-  .form-inputs
-    = f.input :name
-    = f.input :field_type
+  .form-inputs.col-sm-12
+    = f.input :name, :label => "Nombre"
+    = f.input :field_type, :label => "Tipo de cancha"
     = f.input :geoloc, as: :hidden, value: "#{@play_field.geoloc}"
     #editMap style=("width: 500px; height: 400px;")
     h3 
-      | ¿Qué horas estan disponibles todos los dias?
+      | ¿Qué horas están disponibles todos los días?
+    /.checkbox-inline
     - Timeslot.where(play_field: @play_field.id).each do |t|
-      = "#{t.at_hour}:00  "
-      <input type="checkbox" #{t.available ? 'checked' : '' } name="times[#{t.at_hour}]"></input>
-      br/
+      label.checkbox-inline
+        <input type="checkbox" #{t.available ? 'checked' : '' } name="times[#{t.at_hour}]">#{t.at_hour}:00</input>
+      
+      -if (t.at_hour + 1) % 3 == 0
+        br/
+        br/
       /input type="checkbox"  "      br/
     - if Timeslot.where(play_field: @play_field.id).count == 0
       -for t in 0..23
@@ -21,4 +25,5 @@
         br/
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, "Registrar cambios"
+
