--- a/App/Canchas/app/src/main/res/layout/activity_map.xml
+++ b/App/Canchas/app/src/main/res/layout/activity_map.xml
@@ -14,7 +14,8 @@ android:layout_width="match_parent" android:layout_height="match_parent">
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list"
-        android:layout_above="@+id/footer_mapa"/>
+        android:layout_above="@+id/footer_mapa"
+        />
 
     <LinearLayout
         android:id="@+id/footer_mapa"
