--- a/App/Canchas/app/src/main/res/layout/row_canchalist.xml
+++ b/App/Canchas/app/src/main/res/layout/row_canchalist.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
 
 
@@ -49,6 +50,7 @@
 
     <Button
 
+        android:id="@+id/btn_rentar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -56,7 +58,9 @@
         android:layout_margin="15dp"
         android:text="rentar"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
 
     </RelativeLayout>
